# chatgpt-vision-rust

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yaml
demo/: Cargo.toml
demo/src/: main.rs
examples/chatgpt-4v/: Cargo.toml  README.md
pick_action_from_image/: Cargo.toml  README.md
pick_action_from_image/src/: ai.rs  chatgpt_4v.rs
src/: action_picker.rs  ai.rs  chatgpt_4v.rs  lib.rs  main.rs
templates/: pick_action_from_image_prompt.txt
