[package]
name = "pick_action_from_image"
version = "0.1.0"
authors = ["Audrow Nash <audrow@hey.com>"]
categories = ["API bindings", "Asynchronous", "Robotics", "Computer Vision"]
keywords = ["image processing", "llm", "ai", "chatgpt"]
edition = "2021"
description = "Pick an action from an image."
license = "MIT"
repository = "https://github.com/paudrow/chatgpt-vision-rust"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/src/**",
    "/templates/**",
    "/README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
async-trait = "0.1.74"
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
url = "2.5.0"
